mejoras de seguridad y optimizacion backend
se comenzo la implementacion de un registo para los usuarios